--- a/solar-dashboard.html
+++ b/solar-dashboard.html
@@ -409,7 +409,7 @@
               </div>
             ) : cashFlows.length > 0 ? (
               <div>
-                /{/* result summary */}
+                {/* result summary */}
                 <div className="mb-8">
                   <h2 className="text-xl font-semibold mb-4 text-blue-800">Project Summary</h2>
                   <div className="grid md:grid-cols-2 lg:grid-cols-3 gap-4">
